[gd_scene load_steps=5 format=2]

[ext_resource path="res://app/scenes/splash_screen/splash_logo_part_1.png" type="Texture" id=1]
[ext_resource path="res://app/scenes/splash_screen/splash_logo_part_2.png" type="Texture" id=2]
[ext_resource path="res://app/scenes/splash_screen/logo_splash.gd" type="Script" id=3]
[ext_resource path="res://app/scenes/splash_screen/suffragium_logo.wav" type="AudioStream" id=4]

[node name="LogoSplash" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SplashLogo" type="Control" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -614.0
margin_top = -113.0
margin_right = 614.0
margin_bottom = 113.0
rect_min_size = Vector2( 1228, 226 )
rect_pivot_offset = Vector2( 614, 113 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Part2" type="TextureRect" parent="SplashLogo"]
margin_left = -347.0
margin_right = 727.0
margin_bottom = 226.0
texture = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Part1" type="TextureRect" parent="SplashLogo"]
margin_left = -347.0
margin_right = 727.0
margin_bottom = 226.0
texture = ExtResource( 1 )

[node name="Wait250" type="Timer" parent="SplashLogo"]
wait_time = 0.25
one_shot = true

[node name="TweenFadeIn" type="Tween" parent="SplashLogo"]

[node name="Wait500" type="Timer" parent="SplashLogo"]
wait_time = 0.5
one_shot = true

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="SplashLogo"]
stream = ExtResource( 4 )
volume_db = -10.0

[node name="TweenPart1" type="Tween" parent="SplashLogo"]

[node name="TweenPart2" type="Tween" parent="SplashLogo"]

[node name="Wait1000" type="Timer" parent="SplashLogo"]
one_shot = true

[node name="TweenFadeOut" type="Tween" parent="SplashLogo"]

[node name="TweenSceneFadeOut" type="Tween" parent="."]

[node name="Overlay" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="timeout" from="SplashLogo/Wait250" to="." method="_on_Wait250_timeout"]
[connection signal="tween_completed" from="SplashLogo/TweenFadeIn" to="." method="_on_TweenFadeIn_tween_completed"]
[connection signal="timeout" from="SplashLogo/Wait500" to="." method="_on_Wait500_timeout"]
[connection signal="tween_completed" from="SplashLogo/TweenPart2" to="." method="_on_TweenPart2_tween_completed"]
[connection signal="timeout" from="SplashLogo/Wait1000" to="." method="_on_Wait1000_timeout"]
[connection signal="tween_completed" from="SplashLogo/TweenFadeOut" to="." method="_on_TweenFadeOut_tween_completed"]
[connection signal="tween_completed" from="TweenSceneFadeOut" to="." method="_on_TweenSceneFadeOut_tween_completed"]
